feat: add support for Java formatting in format_code function